Update cards seeds, error handling and deck building
